--- a/package.json
+++ b/package.json
@@ -5,24 +5,36 @@
   "scripts": {
     "build": "react-router build",
     "dev": "react-router dev",
-    "start": "react-router-serve ./build/server/index.js",
+    "start": "npm run start:server",
+    "start:server": "react-router-serve ./build/server/index.js",
+    "start:client": "npx --yes serve ./build/client",
     "types:check": "react-router typegen && fumadocs-mdx && tsc --noEmit",
     "postinstall": "fumadocs-mdx",
     "lint": "biome check",
     "format": "biome format --write"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.2.4",
     "@react-router/node": "^7.11.0",
     "@react-router/serve": "^7.11.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "fumadocs-core": "16.4.2",
     "fumadocs-mdx": "14.2.4",
     "fumadocs-ui": "16.4.2",
+    "gsap": "^3.13.0",
+    "i18next-browser-languagedetector": "^8.2.0",
     "isbot": "^5.1.32",
+    "lucide-react": "^0.562.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
-    "react-router": "^7.11.0"
+    "react-i18next": "^16.5.1",
+    "react-router": "^7.11.0",
+    "split-type": "^0.3.4",
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
+    "@biomejs/biome": "^2.3.10",
     "@react-router/dev": "^7.11.0",
     "@tailwindcss/vite": "^4.1.18",
     "@types/mdx": "^2.0.13",
@@ -31,9 +43,9 @@
     "@types/react-dom": "^19.2.3",
     "react-router-devtools": "^6.0.0",
     "tailwindcss": "^4.1.18",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5.9.3",
     "vite": "^7.3.0",
-    "vite-tsconfig-paths": "^6.0.3",
-    "@biomejs/biome": "^2.3.10"
+    "vite-tsconfig-paths": "^6.0.3"
   }
 }
