--- a/.github/workflows/askaric-gh-pages.yml
+++ b/.github/workflows/askaric-gh-pages.yml
@@ -3,9 +3,6 @@ name: Deploy askaric to GitHub Pages
 on:
   push:
     branches: [main]
-    paths:
-      - "askaric/**"
-      - ".github/workflows/askaric-gh-pages.yml"
   workflow_dispatch:
 
 permissions:
@@ -27,30 +24,27 @@ jobs:
         with:
           node-version: "20"
           cache: "npm"
-          cache-dependency-path: "askaric/package-lock.json"
+          cache-dependency-path: "package-lock.json"
 
       - name: Install dependencies
-        working-directory: askaric
         run: npm ci
 
       - name: Build project
-        working-directory: askaric
         run: npm run build
 
       - name: Disable Jekyll
-        run: touch askaric/build/client/.nojekyll
+        run: touch build/client/.nojekyll
 
       - name: Copy CNAME (optional)
         run: |
-          if [ -f askaric/public/CNAME ]; then
-            cp askaric/public/CNAME askaric/build/client/CNAME
+          if [ -f public/CNAME ]; then
+            cp public/CNAME build/client/CNAME
           fi
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./askaric/build/client
+          publish_dir: ./build/client
           publish_branch: gh-pages
           force_orphan: true
-
