--- a/.github/workflows/askaric-gh-pages.yml
+++ b/.github/workflows/askaric-gh-pages.yml
@@ -6,15 +6,20 @@ on:
   workflow_dispatch:
 
 permissions:
-  contents: write
+  contents: read
+  pages: write
+  id-token: write
 
 concurrency:
-  group: askaric-gh-pages
+  group: pages
   cancel-in-progress: true
 
 jobs:
-  build-and-deploy:
+  build:
     runs-on: ubuntu-latest
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -35,16 +40,20 @@ jobs:
       - name: Disable Jekyll
         run: touch build/client/.nojekyll
 
+      - name: Setup Pages
+        uses: actions/configure-pages@v5
+
       - name: Copy CNAME (optional)
         run: |
           if [ -f public/CNAME ]; then
             cp public/CNAME build/client/CNAME
           fi
 
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v4
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./build/client
-          publish_branch: gh-pages
-          force_orphan: true
+          path: build/client
+
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
