--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "npm run start:server",
     "start:server": "react-router-serve ./build/server/index.js",
     "start:client": "npx --yes serve ./build/client",
+    "test": "vitest run",
     "types:check": "react-router typegen && fumadocs-mdx && tsc --noEmit",
     "postinstall": "fumadocs-mdx",
     "lint": "biome check",
@@ -26,6 +27,7 @@
     "i18next-browser-languagedetector": "^8.2.0",
     "isbot": "^5.1.32",
     "lucide-react": "^0.562.0",
+    "mermaid": "^11.12.2",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-i18next": "^16.5.1",
@@ -37,15 +39,20 @@
     "@biomejs/biome": "^2.3.10",
     "@react-router/dev": "^7.11.0",
     "@tailwindcss/vite": "^4.1.18",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.2",
+    "@testing-library/user-event": "^14.6.1",
     "@types/mdx": "^2.0.13",
     "@types/node": "^24.10.2",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
+    "jsdom": "^27.4.0",
     "react-router-devtools": "^6.0.0",
     "tailwindcss": "^4.1.18",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5.9.3",
     "vite": "^7.3.0",
-    "vite-tsconfig-paths": "^6.0.3"
+    "vite-tsconfig-paths": "^6.0.3",
+    "vitest": "^4.0.18"
   }
 }
