--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "format": "biome format --write"
   },
   "dependencies": {
+    "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
     "@react-router/node": "^7.11.0",
     "@react-router/serve": "^7.11.0",
@@ -26,12 +27,15 @@
     "gsap": "^3.13.0",
     "i18next-browser-languagedetector": "^8.2.0",
     "isbot": "^5.1.32",
+    "katex": "^0.16.28",
     "lucide-react": "^0.562.0",
     "mermaid": "^11.12.2",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-i18next": "^16.5.1",
     "react-router": "^7.11.0",
+    "rehype-katex": "^7.0.1",
+    "remark-math": "^6.0.0",
     "split-type": "^0.3.4",
     "tailwind-merge": "^3.4.0"
   },
